# MyFirstApp

./: meson.build
data/: com.emethari.MyFirstApp.appdata.xml.in  com.emethari.MyFirstApp.desktop.in  com.emethari.MyFirstApp.gschema.xml  meson.build
po/: POTFILES  meson.build
src/: com.emethari.MyFirstApp.data.gresource.xml  com.emethari.MyFirstApp.src.gresource.xml  main.js  meson.build  window.js  window.ui
